# BananiaAI

./: Dockerfile  README.md  main.py  pyproject.toml  readme.md  requirements.in  requirements.txt
Character/: capo.py  mutable_player.py  player.py  population.py
Character/brain/: brain.py  myneuralnet.py
Level/: generic_level.py  level_neuro_evolution.py  level_one.py  level_pathfinding.py
Utility/: shape.py  ui.py
